--- a/public/account.html
+++ b/public/account.html
@@ -6,6 +6,9 @@
   <title>My Account - WHITELINEZ</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.svg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;800&display=swap" />
   <link rel="stylesheet" href="/css/main.css" />
   <script src="/js/vercel-analytics-init.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
@@ -13,7 +16,7 @@
 <body class="dark account-page">
 
   <header class="site-header">
-    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.svg" alt="WHITELINEZ" /></a>
+    <a href="/index.html" class="logo"><img src="/img/logoicon.png" alt="WHITELINEZ" /><span class="logo-title">AI TRAFFIC JAMAICA</span></a>
     <nav>
       <a id="account-nav-admin" href="/admin.html" class="hidden">Admin</a>
       <a href="/index.html">Live</a>
