--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <title>WHITELINEZ - Live Traffic Betting</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.svg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;800&display=swap" />
   <link rel="stylesheet" href="/css/main.css" />
   <script src="/js/vercel-analytics-init.js"></script>
   <script defer src="/_vercel/insights/script.js"></script>
@@ -20,9 +23,9 @@
     <nav>
       <span id="nav-balance" class="nav-balance hidden"></span>
       <span id="nav-auth">
-        <a href="/login.html" class="nav-icon-btn" title="Login">
+        <button id="btn-open-login" class="nav-icon-btn" title="Login">
           <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
-        </a>
+        </button>
         <a href="/register.html" class="nav-icon-btn nav-icon-register" title="Create account">
           <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><line x1="19" y1="8" x2="19" y2="14"/><line x1="22" y1="11" x2="16" y2="11"/></svg>
         </a>
@@ -165,6 +168,7 @@
         <div id="markets-container">
           <p class="loading">Loading markets...</p>
         </div>
+        <div id="banners-section" class="banners-section hidden"></div>
       </div>
 
       <div id="tab-activity" class="tab-content">
@@ -309,6 +313,34 @@
 
   </main>
 
+  <!-- ── Login Modal ───────────────────────────────────────────── -->
+  <div id="login-modal" class="auth-modal hidden" role="dialog" aria-modal="true" aria-label="Sign in">
+    <div class="auth-modal-backdrop" id="login-modal-backdrop"></div>
+    <div class="auth-card auth-modal-card">
+      <button class="auth-modal-close" id="login-modal-close" aria-label="Close">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+      </button>
+      <a href="/index.html" class="logo">
+        <img src="/img/logoicon.png" alt="WHITELINEZ" />
+        <span class="logo-title">AI TRAFFIC JAMAICA</span>
+      </a>
+      <h1>Sign In</h1>
+      <form id="modal-login-form">
+        <div class="field">
+          <label for="modal-email">Email</label>
+          <input id="modal-email" type="email" autocomplete="email" required />
+        </div>
+        <div class="field">
+          <label for="modal-password">Password</label>
+          <input id="modal-password" type="password" autocomplete="current-password" required />
+        </div>
+        <p id="modal-auth-error" class="auth-error" role="alert"></p>
+        <button type="submit" class="btn-primary btn-full" id="modal-submit-btn">Sign In</button>
+      </form>
+      <p class="auth-switch">Don't have an account? <a href="/register.html">Register</a></p>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1/dist/hls.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.4.3/dist/pixi.min.js"></script>
@@ -331,6 +363,7 @@
   <script src="/js/live-bet.js"></script>
   <script src="/js/chat.js"></script>
   <script src="/js/activity.js"></script>
+  <script src="/js/banners.js"></script>
   <script src="/js/index-init.js"></script>
 </body>
 </html>
