--- a/public/admin.html
+++ b/public/admin.html
@@ -938,20 +938,8 @@
   </main>
 </div><!-- .admin-layout -->
 
-<!-- Sidebar toggle script (inline, tiny) -->
-<script>
-(function(){
-  var sidebar  = document.getElementById('admin-sidebar');
-  var overlay  = document.getElementById('sidebar-overlay');
-  var openBtn  = document.getElementById('topbar-hamburger');
-  var closeBtn = document.getElementById('sidebar-toggle');
-  function open()  { sidebar.classList.add('open'); overlay.classList.add('visible'); }
-  function close() { sidebar.classList.remove('open'); overlay.classList.remove('visible'); }
-  if (openBtn)  openBtn.addEventListener('click', open);
-  if (closeBtn) closeBtn.addEventListener('click', close);
-  if (overlay)  overlay.addEventListener('click', close);
-})();
-</script>
+<!-- Sidebar toggle script -->
+<script src="/js/admin-sidebar-toggle.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1/dist/hls.min.js"></script>
