--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WHITELINEZ - Live Traffic Betting</title>
+  <title>AI TRAFFIC JAMAICA</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +24,14 @@
       <span id="nav-balance" class="nav-balance hidden"></span>
       <span id="nav-auth">
         <button id="btn-open-login" class="nav-icon-btn" title="Login">
-          <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
+          <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+            <path d="M12 10c-1.5 0-2.8.8-3.5 2"/>
+            <path d="M8 12.5A6 6 0 0 1 12 6a6 6 0 0 1 6 6.5"/>
+            <path d="M6 15a8 8 0 0 1 .8-3.5"/>
+            <path d="M17.3 15A8 8 0 0 0 12 4a8 8 0 0 0-8 8"/>
+            <path d="M10 18a2.5 2.5 0 0 0 4 0"/>
+            <line x1="12" y1="20" x2="12" y2="22"/>
+          </svg>
         </button>
         <button id="btn-open-register" class="nav-icon-btn nav-icon-register" title="Create account">
           <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><line x1="19" y1="8" x2="19" y2="14"/><line x1="22" y1="11" x2="16" y2="11"/></svg>
@@ -64,16 +71,78 @@
           </button>
         </div>
 
+        <div id="stream-offline-overlay" class="stream-offline-overlay hidden">
+          <div class="stream-offline-inner">
+            <svg width="42" height="42" viewBox="0 0 42 42" fill="none">
+              <path d="M3 13V3H13" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M29 3H39V13" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M3 29V39H13" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M29 39H39V29" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              <rect x="11" y="12" width="20" height="18" rx="1.5" stroke="rgba(255,214,0,0.3)" stroke-width="1" stroke-dasharray="3 2"/>
+              <line x1="15" y1="16" x2="27" y2="26" stroke="rgba(255,214,0,0.7)" stroke-width="1.8" stroke-linecap="round"/>
+              <line x1="27" y1="16" x2="15" y2="26" stroke="rgba(255,214,0,0.7)" stroke-width="1.8" stroke-linecap="round"/>
+            </svg>
+            <div class="stream-offline-copy">
+              <p class="stream-offline-title">STREAM OFFLINE</p>
+              <p class="stream-offline-info">Reconnecting to live feed...</p>
+            </div>
+            <div class="stream-offline-bar">
+              <span class="stream-offline-dot"></span>
+              <span class="stream-offline-label">SCANNING FOR SIGNAL</span>
+            </div>
+          </div>
+        </div>
+
         <div id="count-widget" class="count-widget">
           <div class="count-widget-total">
             <span id="cw-total">-</span>
             <span id="cw-total-label" class="cw-label">TOTAL</span>
           </div>
           <div class="count-widget-breakdown">
-            <span class="cw-item"><svg class="vehicle-icon car" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><path d="M3 14l2-5a2 2 0 0 1 2-1h10a2 2 0 0 1 2 1l2 5"></path><rect x="2" y="14" width="20" height="5" rx="1"></rect><circle cx="7" cy="19" r="1.8"></circle><circle cx="17" cy="19" r="1.8"></circle></svg><strong id="cw-cars">-</strong></span>
-            <span class="cw-item"><svg class="vehicle-icon truck" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="9" width="12" height="8" rx="1"></rect><path d="M14 12h4l3 3v2h-7z"></path><circle cx="7" cy="19" r="1.8"></circle><circle cx="17" cy="19" r="1.8"></circle></svg><strong id="cw-trucks">-</strong></span>
-            <span class="cw-item"><svg class="vehicle-icon bus" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="6" width="18" height="11" rx="2"></rect><path d="M3 11h18"></path><circle cx="8" cy="19" r="1.8"></circle><circle cx="16" cy="19" r="1.8"></circle></svg><strong id="cw-buses">-</strong></span>
-            <span class="cw-item"><svg class="vehicle-icon moto" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><circle cx="6" cy="17" r="3"></circle><circle cx="18" cy="17" r="3"></circle><path d="M6 17l5-6h4l3 6"></path><path d="M12 11l2-3h3"></path></svg><strong id="cw-motos">-</strong></span>
+            <!-- Car: sleek sedan side-profile -->
+            <span class="cw-item">
+              <svg class="vehicle-icon car" viewBox="0 0 22 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-label="Cars">
+                <path d="M1 8h20M4 8l2.5-4.5a1 1 0 0 1 .9-.5h7.2a1 1 0 0 1 .9.5L18 8"/>
+                <rect x="1" y="8" width="20" height="2.5" rx="0.5"/>
+                <circle cx="6" cy="11" r="1.2"/>
+                <circle cx="16" cy="11" r="1.2"/>
+              </svg>
+              <strong id="cw-cars">-</strong>
+            </span>
+            <!-- Truck: cab + trailer -->
+            <span class="cw-item">
+              <svg class="vehicle-icon truck" viewBox="0 0 24 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-label="Trucks">
+                <rect x="1" y="4" width="14" height="7" rx="0.5"/>
+                <path d="M15 6.5h4.5l2.5 2.5v2.5H15z"/>
+                <circle cx="5.5" cy="12" r="1.2"/>
+                <circle cx="18.5" cy="12" r="1.2"/>
+                <line x1="1" y1="7.5" x2="15" y2="7.5"/>
+              </svg>
+              <strong id="cw-trucks">-</strong>
+            </span>
+            <!-- Bus: tall rectangular body -->
+            <span class="cw-item">
+              <svg class="vehicle-icon bus" viewBox="0 0 22 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-label="Buses">
+                <rect x="1" y="2" width="20" height="8.5" rx="1"/>
+                <line x1="1" y1="5.5" x2="21" y2="5.5"/>
+                <line x1="7" y1="2" x2="7" y2="10.5"/>
+                <line x1="14" y1="2" x2="14" y2="10.5"/>
+                <circle cx="6" cy="12" r="1.2"/>
+                <circle cx="16" cy="12" r="1.2"/>
+              </svg>
+              <strong id="cw-buses">-</strong>
+            </span>
+            <!-- Moto: two wheels + minimal frame -->
+            <span class="cw-item">
+              <svg class="vehicle-icon moto" viewBox="0 0 22 13" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-label="Motorcycles">
+                <circle cx="5" cy="10" r="2.8"/>
+                <circle cx="17" cy="10" r="2.8"/>
+                <path d="M5 10 L9 5 L13 5 L17 10"/>
+                <path d="M13 5 L15 3 L18 3"/>
+                <line x1="9" y1="5" x2="9" y2="3"/>
+              </svg>
+              <strong id="cw-motos">-</strong>
+            </span>
           </div>
           <div id="cw-ws-dot" class="cw-ws-dot cw-ws-err"></div>
         </div>
@@ -342,6 +411,14 @@
         <p id="modal-auth-error" class="auth-error" role="alert"></p>
         <button type="submit" class="btn-primary btn-full" id="modal-submit-btn">Sign In</button>
       </form>
+      <div class="auth-divider"><span>or</span></div>
+      <button type="button" id="modal-guest-btn" class="btn-outline btn-full btn-guest-login">
+        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+          <circle cx="12" cy="8" r="4"/>
+          <path d="M4 20c0-3.3 3.6-6 8-6s8 2.7 8 6"/>
+        </svg>
+        Continue as Guest
+      </button>
       <p class="auth-switch">Don't have an account? <a href="#" id="switch-to-register">Register</a></p>
     </div>
   </div>
@@ -378,6 +455,26 @@
     </div>
   </div>
 
+  <!-- ── Camera Switcher Modal ───────────────────────────────── -->
+  <div id="cam-modal-backdrop" class="cam-modal-backdrop hidden"></div>
+  <div id="camera-modal" class="camera-modal hidden" role="dialog" aria-modal="true" aria-label="Camera Locations">
+    <div class="cam-modal-inner">
+      <div class="cam-modal-head">
+        <div class="cam-modal-title-row">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"><rect x="2" y="7" width="14" height="10" rx="1.5"/><path d="M16 10l5-3v10l-5-3"/></svg>
+          <span>Live Cameras</span>
+        </div>
+        <button id="cam-modal-close" class="cam-modal-close" aria-label="Close">
+          <svg width="14" height="14" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 4L4 12M4 4l8 8"/></svg>
+        </button>
+      </div>
+      <p class="cam-modal-hint">Click <strong>Preview</strong> to watch a live feed before switching. Click <strong>Switch Here</strong> to change the main stream.</p>
+      <div id="cam-modal-body" class="cam-modal-body">
+        <p class="cam-modal-empty">Loading cameras...</p>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1/dist/hls.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.4.3/dist/pixi.min.js"></script>
@@ -401,6 +498,7 @@
   <script src="/js/chat.js"></script>
   <script src="/js/activity.js"></script>
   <script src="/js/banners.js"></script>
+  <script src="/js/camera-switcher.js"></script>
   <script src="/js/index-init.js"></script>
 </body>
 </html>
