--- a/public/account.html
+++ b/public/account.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Account - WHITELINEZ</title>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/img/gfdaw-removebg-preview.png" />
+  <link rel="shortcut icon" href="/img/gfdaw-removebg-preview.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo:wght@700;800&family=JetBrains+Mono:wght@400;700&display=swap" />
@@ -16,7 +16,7 @@
 <body class="dark account-page">
 
   <header class="site-header">
-    <a href="/index.html" class="logo"><img src="/img/logoicon.png" alt="WHITELINEZ" /><span class="logo-title">AI TRAFFIC JAMAICA</span></a>
+    <a href="/index.html" class="logo"><img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" /><span class="logo-title">AI TRAFFIC JAMAICA</span></a>
     <nav>
       <a id="account-nav-admin" href="/admin.html" class="hidden">Admin</a>
       <a href="/index.html">Live</a>
