--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI TRAFFIC JAMAICA</title>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="shortcut icon" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/img/gfdaw-removebg-preview.png" />
+  <link rel="shortcut icon" href="/img/gfdaw-removebg-preview.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo:wght@700;800&family=JetBrains+Mono:wght@400;700&display=swap" />
@@ -17,7 +17,7 @@
 
   <header class="site-header">
     <a href="/index.html" class="logo">
-      <img src="/img/logoicon.png" alt="WHITELINEZ" />
+      <img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" />
       <span class="logo-title">AI TRAFFIC JAMAICA</span>
     </a>
     <nav>
@@ -395,7 +395,7 @@
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
       </button>
       <a href="/index.html" class="logo">
-        <img src="/img/logoicon.png" alt="WHITELINEZ" />
+        <img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" />
         <span class="logo-title">AI TRAFFIC JAMAICA</span>
       </a>
       <h1>Sign In</h1>
@@ -431,7 +431,7 @@
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
       </button>
       <a href="/index.html" class="logo">
-        <img src="/img/logoicon.png" alt="WHITELINEZ" />
+        <img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" />
         <span class="logo-title">AI TRAFFIC JAMAICA</span>
       </a>
       <h1>Create Account</h1>
