--- a/public/index.html
+++ b/public/index.html
@@ -16,23 +16,17 @@
 <body class="dark">
 
   <header class="site-header">
-    <a href="/index.html" class="logo">
-      <img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" />
+    <a href="/index.html" class="logo" id="site-logo">
+      <span class="logo-img-wrap">
+        <img class="logo-icon" src="/img/iconinframes.png" alt="AI TRAFFIC JAMAICA" />
+        <img class="logo-ai-frame" src="/img/aiframes.png" alt="" aria-hidden="true" />
+      </span>
       <span class="logo-title">AI TRAFFIC JAMAICA</span>
     </a>
     <nav>
       <span id="nav-balance" class="nav-balance hidden"></span>
       <span id="nav-auth">
-        <button id="btn-open-login" class="nav-icon-btn" title="Login">
-          <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-            <path d="M12 10c-1.5 0-2.8.8-3.5 2"/>
-            <path d="M8 12.5A6 6 0 0 1 12 6a6 6 0 0 1 6 6.5"/>
-            <path d="M6 15a8 8 0 0 1 .8-3.5"/>
-            <path d="M17.3 15A8 8 0 0 0 12 4a8 8 0 0 0-8 8"/>
-            <path d="M10 18a2.5 2.5 0 0 0 4 0"/>
-            <line x1="12" y1="20" x2="12" y2="22"/>
-          </svg>
-        </button>
+        <button id="btn-open-login" class="nav-login-btn" title="Login">Login</button>
         <button id="btn-open-register" class="nav-icon-btn nav-icon-register" title="Create account">
           <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><line x1="19" y1="8" x2="19" y2="14"/><line x1="22" y1="11" x2="16" y2="11"/></svg>
         </button>
@@ -73,14 +67,21 @@
 
         <div id="stream-offline-overlay" class="stream-offline-overlay hidden">
           <div class="stream-offline-inner">
-            <svg width="42" height="42" viewBox="0 0 42 42" fill="none">
-              <path d="M3 13V3H13" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M29 3H39V13" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M3 29V39H13" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M29 39H39V29" stroke="#FFD600" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              <rect x="11" y="12" width="20" height="18" rx="1.5" stroke="rgba(255,214,0,0.3)" stroke-width="1" stroke-dasharray="3 2"/>
-              <line x1="15" y1="16" x2="27" y2="26" stroke="rgba(255,214,0,0.7)" stroke-width="1.8" stroke-linecap="round"/>
-              <line x1="27" y1="16" x2="15" y2="26" stroke="rgba(255,214,0,0.7)" stroke-width="1.8" stroke-linecap="round"/>
+            <!-- Broken screen icon -->
+            <svg width="48" height="48" viewBox="0 0 48 48" fill="none" aria-hidden="true">
+              <!-- Monitor body -->
+              <rect x="3" y="6" width="42" height="28" rx="2.5" stroke="#ef4444" stroke-width="1.8"/>
+              <!-- Stand stem -->
+              <line x1="24" y1="34" x2="24" y2="41" stroke="#ef4444" stroke-width="1.8" stroke-linecap="round"/>
+              <!-- Stand base -->
+              <line x1="14" y1="41" x2="34" y2="41" stroke="#ef4444" stroke-width="1.8" stroke-linecap="round"/>
+              <!-- Crack lightning bolt -->
+              <path d="M26 6 L21 20 L27 20 L19 34" stroke="rgba(239,68,68,0.85)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              <!-- Crack splinters -->
+              <line x1="21" y1="20" x2="12" y2="26" stroke="rgba(239,68,68,0.45)" stroke-width="1.1" stroke-linecap="round"/>
+              <line x1="21" y1="20" x2="13" y2="14" stroke="rgba(239,68,68,0.35)" stroke-width="1" stroke-linecap="round"/>
+              <line x1="27" y1="20" x2="36" y2="16" stroke="rgba(239,68,68,0.4)" stroke-width="1" stroke-linecap="round"/>
+              <line x1="27" y1="20" x2="37" y2="25" stroke="rgba(239,68,68,0.35)" stroke-width="1" stroke-linecap="round"/>
             </svg>
             <div class="stream-offline-copy">
               <p class="stream-offline-title">STREAM OFFLINE</p>
@@ -88,20 +89,34 @@
             </div>
             <div class="stream-offline-bar">
               <span class="stream-offline-dot"></span>
-              <span class="stream-offline-label">SCANNING FOR SIGNAL</span>
+              <span class="stream-offline-label">SIGNAL LOST</span>
             </div>
           </div>
         </div>
 
         <div id="count-widget" class="count-widget">
-          <div class="count-widget-total">
-            <span id="cw-total">-</span>
-            <span id="cw-total-label" class="cw-label">TOTAL</span>
+
+          <!-- Normal mode: global total + breakdown -->
+          <div id="cw-normal" class="cw-normal-wrap">
+            <div class="count-widget-total">
+              <span id="cw-total">-</span>
+              <span id="cw-total-label" class="cw-label">TOTAL</span>
+            </div>
           </div>
-          <div id="cw-guess-row" class="cw-guess-row hidden">
-            <span class="cw-guess-label">MY GUESS</span>
-            <span id="cw-guess-val" class="cw-guess-val">—</span>
+
+          <!-- Guess mode: X/Y progress toward target -->
+          <div id="cw-guess-mode" class="cw-guess-mode hidden">
+            <div class="cw-gm-nums">
+              <span id="cw-gm-current">0</span>
+              <span class="cw-gm-sep">/</span>
+              <span id="cw-gm-target">—</span>
+            </div>
+            <span class="cw-gm-label">MY GUESS</span>
+            <div class="cw-gm-bar-wrap">
+              <div id="cw-gm-bar" class="cw-gm-bar"></div>
+            </div>
           </div>
+
           <div class="count-widget-breakdown">
             <!-- Car: sleek sedan side-profile -->
             <span class="cw-item">
@@ -250,6 +265,11 @@
           <span>Top Players</span>
           <button id="lb-refresh" class="btn-sm btn-outline" style="margin-left:auto;">Refresh</button>
         </div>
+        <div class="lb-window-tabs">
+          <button class="lb-wtab active" data-win="60">1 MIN</button>
+          <button class="lb-wtab" data-win="180">3 MIN</button>
+          <button class="lb-wtab" data-win="300">5 MIN</button>
+        </div>
         <div id="leaderboard-list" class="lb-list">
           <p class="muted" style="font-size:0.82rem;padding:12px 0;">Open tab to load rankings.</p>
         </div>
@@ -329,18 +349,7 @@
         <p id="bp-market-label" class="bp-market-label"></p>
 
         <div class="bp-field">
-          <label>Vehicle Type</label>
-          <div class="bp-pills" id="bp-vehicle-pills">
-            <button class="pill active" data-val="">All</button>
-            <button class="pill" data-val="car"><svg class="vehicle-icon car" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><path d="M3 14l2-5a2 2 0 0 1 2-1h10a2 2 0 0 1 2 1l2 5"></path><rect x="2" y="14" width="20" height="5" rx="1"></rect><circle cx="7" cy="19" r="1.8"></circle><circle cx="17" cy="19" r="1.8"></circle></svg>Car</button>
-            <button class="pill" data-val="truck"><svg class="vehicle-icon truck" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="9" width="12" height="8" rx="1"></rect><path d="M14 12h4l3 3v2h-7z"></path><circle cx="7" cy="19" r="1.8"></circle><circle cx="17" cy="19" r="1.8"></circle></svg>Truck</button>
-            <button class="pill" data-val="bus"><svg class="vehicle-icon bus" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="6" width="18" height="11" rx="2"></rect><path d="M3 11h18"></path><circle cx="8" cy="19" r="1.8"></circle><circle cx="16" cy="19" r="1.8"></circle></svg>Bus</button>
-            <button class="pill" data-val="motorcycle"><svg class="vehicle-icon moto" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><circle cx="6" cy="17" r="3"></circle><circle cx="18" cy="17" r="3"></circle><path d="M6 17l5-6h4l3 6"></path><path d="M12 11l2-3h3"></path></svg>Moto</button>
-          </div>
-        </div>
-
-        <div class="bp-field">
-          <label>Match Duration</label>
+          <label>Observation Window</label>
           <div class="bp-pills" id="bp-window-pills">
             <button class="pill active" data-val="60">1 min</button>
             <button class="pill" data-val="180">3 min</button>
@@ -350,17 +359,28 @@
 
         <div class="bp-field">
           <label for="bp-count">Your Guess</label>
-          <p class="bp-field-hint">How many vehicles will pass?</p>
+          <p class="bp-field-hint">How many vehicles will pass in your window?</p>
           <div class="bp-count-row">
-            <button class="btn-count-adj" id="bp-count-minus">-</button>
+            <button class="btn-count-adj" id="bp-count-minus">−</button>
             <input id="bp-count" type="number" min="0" max="10000" value="5" />
             <button class="btn-count-adj" id="bp-count-plus">+</button>
           </div>
         </div>
 
-        <div class="bp-points-hint">
-          <svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"><circle cx="12" cy="12" r="10"/><path d="M12 8v4M12 16h.01"/></svg>
-          Closer to the real count = more points earned
+        <!-- Scoring explanation -->
+        <div class="bp-score-card">
+          <div class="bp-sc-row bp-sc-exact">
+            <span class="bp-sc-badge">EXACT</span>
+            <span class="bp-sc-desc">Perfect match → Maximum points</span>
+          </div>
+          <div class="bp-sc-row bp-sc-close">
+            <span class="bp-sc-badge">CLOSE</span>
+            <span class="bp-sc-desc">Within range → Partial points</span>
+          </div>
+          <div class="bp-sc-row bp-sc-miss">
+            <span class="bp-sc-badge">MISS</span>
+            <span class="bp-sc-desc">Too far off → No points</span>
+          </div>
         </div>
 
         <p id="bp-error" class="bp-error" role="alert"></p>
@@ -369,13 +389,18 @@
         <div id="bp-active-bet" class="bp-active-bet hidden">
           <div class="bpa-header">
             <span class="bpa-dot"></span>
-            <span class="bpa-label">MATCH IN PROGRESS</span>
+            <span class="bpa-label">WINDOW ACTIVE</span>
+            <span id="bpa-window-tag" class="bpa-window-tag">1 MIN</span>
           </div>
-          <div class="bpa-timer-row">
-            <svg class="bpa-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-              <circle cx="12" cy="12" r="9"/><path d="M12 7v5l3 2"/>
-            </svg>
-            <strong id="bp-countdown" class="bpa-countdown">--:--</strong>
+          <div class="bpa-receipt">
+            <div class="bpa-receipt-row">
+              <span>Your guess</span>
+              <strong id="bpa-receipt-guess">—</strong>
+            </div>
+            <div class="bpa-receipt-row">
+              <span>Window closes in</span>
+              <strong id="bp-countdown" class="bpa-countdown">--:--</strong>
+            </div>
           </div>
           <p id="bp-active-hint" class="bpa-hint">Your guess is locked in. AI is counting...</p>
         </div>
@@ -393,7 +418,10 @@
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
       </button>
       <a href="/index.html" class="logo">
-        <img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" />
+        <span class="logo-img-wrap">
+          <img class="logo-icon" src="/img/iconinframes.png" alt="AI TRAFFIC JAMAICA" />
+          <img class="logo-ai-frame" src="/img/aiframes.png" alt="" aria-hidden="true" />
+        </span>
         <span class="logo-title">AI TRAFFIC JAMAICA</span>
       </a>
       <h1>Sign In</h1>
@@ -429,7 +457,10 @@
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
       </button>
       <a href="/index.html" class="logo">
-        <img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" />
+        <span class="logo-img-wrap">
+          <img class="logo-icon" src="/img/iconinframes.png" alt="AI TRAFFIC JAMAICA" />
+          <img class="logo-ai-frame" src="/img/aiframes.png" alt="" aria-hidden="true" />
+        </span>
         <span class="logo-title">AI TRAFFIC JAMAICA</span>
       </a>
       <h1>Create Account</h1>
@@ -467,29 +498,29 @@
         </button>
       </div>
       <div class="hiw-modal-body">
-        <p class="hiw-intro">A live CCTV camera films real traffic on a Jamaican road. You watch the feed, predict how many vehicles will pass, and the AI does the counting. Simple.</p>
+        <p class="hiw-intro">A live CCTV camera films real traffic on a Jamaican road. Watch the feed, guess how many vehicles will pass, and the AI does the counting. Closer = more points.</p>
         <ol class="hiw-steps">
           <li class="hiw-step">
             <span class="hiw-step-num">01</span>
             <div class="hiw-step-body">
               <div class="hiw-step-title">Watch the Live Feed</div>
-              <div class="hiw-step-desc">A real camera streams traffic in real time — cars, buses, trucks, bikes. Study the flow before a round opens.</div>
+              <div class="hiw-step-desc">A real camera streams traffic in real time. Study the flow — how busy is it? How fast are vehicles moving? Use that to inform your guess.</div>
             </div>
           </li>
           <li class="hiw-step">
             <span class="hiw-step-num">02</span>
             <div class="hiw-step-body">
-              <div class="hiw-step-title">A Round Opens</div>
-              <div class="hiw-step-desc">The admin starts a timed window — usually 30 to 90 seconds. A countdown appears and betting opens. Don't miss it.</div>
+              <div class="hiw-step-title">A Match Opens</div>
+              <div class="hiw-step-desc">The admin starts a timed match — 1, 3, or 5 minutes. Pick your window and submit your guess before time runs out.</div>
             </div>
           </li>
           <li class="hiw-step">
             <span class="hiw-step-num">03</span>
             <div class="hiw-step-body">
-              <div class="hiw-step-title">Place Your Prediction</div>
-              <div class="hiw-step-desc">Two ways to bet:<br>
-                <span class="hiw-tag hiw-tag-yellow">Exact Count</span> Guess the exact number of vehicles. High risk, best payout.<br>
-                <span class="hiw-tag hiw-tag-cyan">Over / Under</span> Predict above or below a set number. Easier, lower reward.
+              <div class="hiw-step-title">Submit Your Guess</div>
+              <div class="hiw-step-desc">Type in how many vehicles you think will pass during your chosen window.
+                <span class="hiw-tag hiw-tag-yellow">Exact match</span> scores the most points.
+                <span class="hiw-tag hiw-tag-cyan">Close guess</span> still earns partial points.
               </div>
             </div>
           </li>
@@ -497,21 +528,21 @@
             <span class="hiw-step-num">04</span>
             <div class="hiw-step-body">
               <div class="hiw-step-title">AI Counts Every Vehicle</div>
-              <div class="hiw-step-desc">When the round closes, computer vision automatically tracks and counts every vehicle that crossed the camera line. No manual counting, no bias.</div>
+              <div class="hiw-step-desc">Computer vision tracks and counts every vehicle crossing the camera line in real time. No manual counting, no bias.</div>
             </div>
           </li>
           <li class="hiw-step">
             <span class="hiw-step-num">05</span>
             <div class="hiw-step-body">
-              <div class="hiw-step-title">Results &amp; Payouts</div>
-              <div class="hiw-step-desc">Your prediction is compared to the AI count. The closer you are, the better your payout. Exact match = highest multiplier. Check your balance after each round.</div>
+              <div class="hiw-step-title">Score &amp; Leaderboard</div>
+              <div class="hiw-step-desc">Your guess is compared to the AI count. The closer you are, the more points you earn. Build your score across multiple matches and climb the leaderboard.</div>
             </div>
           </li>
         </ol>
         <div class="hiw-footer">
           <span class="hiw-footer-note">
             <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#FFD600" stroke-width="2" stroke-linecap="round"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
-            Rounds run on a schedule. Stay on the feed — the next one starts any time.
+            Matches run on a schedule. Stay on the feed — the next one starts any time.
           </span>
           <button class="hiw-got-it" id="hiw-got-it">Got it</button>
         </div>
